--- a/index.html
+++ b/index.html
@@ -1,7 +1,78 @@
 <html lang="en">
-<title>GitHub</title>
-<body>
-    <h1 style="color: rgb(15, 48, 194); font-size: 200px;">Hello World</h1>
+<head>
+    <title>
+        Anime World
+    </title>
+    <style>
+        *{
+            color: rgb(192, 2, 2);
+        }
+        .niev{
+            color: rgb(100, 19, 176);
+            font-size: 30px;
+        }
+        .hav{
+            color: magenta;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 50px;
+        }
+        .two{
+            background-color: darkturquoise;
+        }
+        .my{
+            /*background-repeat: no-repeat;
+            background-size: 100%;
+            background-image: url('b2f77d0b58d5b49218e76a41d039b07c.webp');*/
+            margin: 0;          
+        }
+        .menu{
+            margin: 0;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            padding-left: 30px;
+            padding-right: 30px;
+            list-style: none;
+            display: flex;
+            justify-content: space-between;
+            background-color: aquamarine;
+        }
+        .menu-item{
+            padding-top: 6px;
+            padding-bottom: 6px;
+            padding-left: 30px;
+            padding-right: 30px;
+            text-decoration: none;
+            color: black;
+            font-size: 40px;
+        }
+        .menu-item:hover{
+            background-color: rgb(100, 200, 167);
+            border-radius: 10px;
+        }
+    </style>
+</head>
+
+<body class="my">
+    <nav>
+        <ul class="menu">
+            <li>
+                <a class="menu-item" href="http://google.com">Main </a>
+            </li>
+            <li>
+                <a class="menu-item" href="https://animevost.org">Animevost </a>
+            </li>
+            <li>
+                <a class="menu-item" href="https://www.google.com/search?q=memes+anime&hl=uk&source=lnms&tbm=isch&sa=X&ved=2ahUKEwi0_bfEo6P4AhVml4sKHVCkCSAQ_AUoAXoECAEQAw&biw=1848&bih=919&dpr=1">Mems </a>
+            </li>
+            <li>
+                <a class="menu-item" href="https://mangahasu.se/index.php">Mangahasu </a>
+            </li>
+            <li>
+                <a class="menu-item" href="https://remanga.org/">remanga </a>
+            </li>
+        </ul>
+    </nav>
+    <h1 style="color: rgb(15, 48, 194); font-size: 200px;">Anime World</h1>
     <h2 style="color: #009900">This is my first project</h2>
     <h3>size3</h3>
     <h4>size4</h4>
@@ -10,7 +81,7 @@
     <p>paragraf</p>
     <img height="561.5" src="https://i.pinimg.com/736x/39/75/a4/3975a4c2b352002fbd160a70b8f5fa08.jpg" alt="there was mem number one">
     <img width="500" src="7abb28aee4dabd847c4664a59cade074.jpg" alt="there was mem number two">
-    <iframe width="1250" height="703" src="https://www.youtube.com/embed/O0N5-91lnIQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/53HmL8T-WQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <ul>
         <li>
             <p>girls</p>
@@ -35,7 +106,9 @@
             </ol>
         </li>
     </ul>
-    
+    <p class="niev">Niev</p>
+    <p class="hav">hav</p>
+    <p class="two">LOL</p>
 </body>
 
 </html>
