--- a/index.html
+++ b/index.html
@@ -1,68 +1,21 @@
 <html lang="en">
+
 <head>
-    <title>
-        Anime World
-    </title>
-    <style>
-        *{
-            color: rgb(192, 2, 2);
-        }
-        .niev{
-            color: rgb(100, 19, 176);
-            font-size: 30px;
-        }
-        .hav{
-            color: magenta;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 50px;
-        }
-        .two{
-            background-color: darkturquoise;
-        }
-        .my{
-            /*background-repeat: no-repeat;
-            background-size: 100%;
-            background-image: url('b2f77d0b58d5b49218e76a41d039b07c.webp');*/
-            margin: 0;          
-        }
-        .menu{
-            margin: 0;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            padding-left: 30px;
-            padding-right: 30px;
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            background-color: aquamarine;
-        }
-        .menu-item{
-            padding-top: 6px;
-            padding-bottom: 6px;
-            padding-left: 30px;
-            padding-right: 30px;
-            text-decoration: none;
-            color: black;
-            font-size: 40px;
-        }
-        .menu-item:hover{
-            background-color: rgb(100, 200, 167);
-            border-radius: 10px;
-        }
-    </style>
+    <title>main</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body class="my">
     <nav>
         <ul class="menu">
             <li>
-                <a class="menu-item" href="http://google.com">Main </a>
+                <a class="menu-item" href="/index.html">Main </a>
             </li>
             <li>
-                <a class="menu-item" href="https://animevost.org">Animevost </a>
+                <a class="menu-item" href="/404.html">Error404 </a>
             </li>
             <li>
-                <a class="menu-item" href="https://www.google.com/search?q=memes+anime&hl=uk&source=lnms&tbm=isch&sa=X&ved=2ahUKEwi0_bfEo6P4AhVml4sKHVCkCSAQ_AUoAXoECAEQAw&biw=1848&bih=919&dpr=1">Mems </a>
+                <a class="menu-item" href="/flex.html">flex </a>
             </li>
             <li>
                 <a class="menu-item" href="https://mangahasu.se/index.php">Mangahasu </a>
@@ -79,9 +32,12 @@
     <h5>size5</h5>
     <h6>size6</h6>
     <p>paragraf</p>
-    <img height="561.5" src="https://i.pinimg.com/736x/39/75/a4/3975a4c2b352002fbd160a70b8f5fa08.jpg" alt="there was mem number one">
+    <img height="561.5" src="https://i.pinimg.com/736x/39/75/a4/3975a4c2b352002fbd160a70b8f5fa08.jpg"
+        alt="there was mem number one">
     <img width="500" src="7abb28aee4dabd847c4664a59cade074.jpg" alt="there was mem number two">
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/53HmL8T-WQ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/53HmL8T-WQ8" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     <ul>
         <li>
             <p>girls</p>
