--- a/index.html
+++ b/index.html
@@ -6,65 +6,78 @@
 </head>
 
 <body class="my">
-    <nav>
-        <ul class="menu">
-            <li>
-                <a class="menu-item" href="/index.html">Main </a>
-            </li>
-            <li>
-                <a class="menu-item" href="/404.html">Error404 </a>
-            </li>
-            <li>
-                <a class="menu-item" href="/flex.html">flex </a>
-            </li>
-            <li>
-                <a class="menu-item" href="https://mangahasu.se/index.php">Mangahasu </a>
-            </li>
-            <li>
-                <a class="menu-item" href="https://remanga.org/">remanga </a>
-            </li>
-        </ul>
-    </nav>
-    <h1 style="color: rgb(15, 48, 194); font-size: 200px;">Anime World</h1>
-    <h2 style="color: #009900">This is my first project</h2>
-    <h3>size3</h3>
-    <h4>size4</h4>
-    <h5>size5</h5>
-    <h6>size6</h6>
-    <p>paragraf</p>
-    <img height="561.5" src="https://i.pinimg.com/736x/39/75/a4/3975a4c2b352002fbd160a70b8f5fa08.jpg"
-        alt="there was mem number one">
-    <img width="500" src="7abb28aee4dabd847c4664a59cade074.jpg" alt="there was mem number two">
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/53HmL8T-WQ8" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-    <ul>
-        <li>
-            <p>girls</p>
-            <ol>
+    <header>
+        <nav>
+            <ul class="menu">
                 <li>
-                    <p>Eva</p>
+                    <a class="menu-item" href="/index.html">Main </a>
                 </li>
                 <li>
-                    <p>Katya</p>
-                </li>
-            </ol>
-        </li>
-        <li>
-            <p>boys</p>
-            <ol>
-                <li>
-                    <p>Ivan</p>
+                    <a class="menu-item" href="/404.html">Error404 </a>
                 </li>
                 <li>
-                    <p>Andrey</p>
+                    <a class="menu-item" href="/flex.html">flex </a>
                 </li>
-            </ol>
-        </li>
-    </ul>
-    <p class="niev">Niev</p>
-    <p class="hav">hav</p>
-    <p class="two">LOL</p>
+                <li>
+                    <a class="menu-item" href="/mems.html">anime mems </a>
+                </li>
+                <li>
+                    <a class="menu-item" href="https://remanga.org/">remanga </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="main-content">
+            <section class="content-sectution" >
+                <h2>My habbits</h2>
+                <h3>Outdoor:</h3>
+                <ul>
+                    <li>
+                        <p>football</p>
+                    </li>
+                    <li>
+                        <p>cycling</p>
+                    </li>
+                    <li>
+                        <p>swimming</p>
+                    </li>
+                    <li>
+                        <p>jogging</p>
+                    </li>
+                    <li>
+                        <p>volleyball</p>
+                    </li>
+                </ul>
+                <h3>Inside:</h3>
+                <ul>
+                    <li>
+                        <p>video games</p>
+                    </li>
+                    <li>
+                        <p>watching YouTube</p>
+                    </li>
+                    <li>
+                        <p>reading manga</p>
+                    </li>
+                    <li>
+                        <p>programming</p>
+                    </li>
+            </section>
+            <section class="content-sectution right">
+                <img  src="https://i.pinimg.com/736x/39/75/a4/3975a4c2b352002fbd160a70b8f5fa08.jpg"
+                    alt="there was mem number one">
+                <img src="7abb28aee4dabd847c4664a59cade074.jpg" alt="there was mem number two">
+            </section>
+            <section class="content-sectution">
+                <a href="https://en.wikipedia.org/wiki/Anime">anime wiki</a>
+            </section>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
 
 </html>
