--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>main</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="my">
@@ -10,16 +10,16 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a class="menu-item" href="/index.html">Main </a>
+                    <a class="menu-item" href="index.html">Main </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/404.html">Error404 </a>
+                    <a class="menu-item" href="404.html">Error404 </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/flex.html">flex </a>
+                    <a class="menu-item" href="flex.html">flex </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/mems.html">anime mems </a>
+                    <a class="menu-item" href="mems.html">anime mems </a>
                 </li>
                 <li>
                     <a class="menu-item" href="https://remanga.org/">remanga </a>
