--- a/flex.html
+++ b/flex.html
@@ -15,13 +15,13 @@
                 <a class="menu-item" href="/404.html">Error404 </a>
             </li>
             <li>
-                <a class="menu-item" href="/flex.html">flex </a>
+                <a class="menu-item active" href="/flex.html">flex </a>
             </li>
             <li>
-                <a class="menu-item" href="https://mangahasu.se/index.php">Mangahasu </a>
+                <a class="menu-item" href="/mems.html">anime mems </a>
             </li>
             <li>
-                <a class="menu-item" href="https://remanga.org/">remanga </a>
+                <a class="menu-item" href="https://mangahasu.se/index.php">mangahasu </a>
             </li>
         </ul>
     </nav>
