--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a class="menu-item" href="/index.html">Main </a>
+                    <a class="menu-item active" href="/index.html">Main </a>
                 </li>
                 <li>
                     <a class="menu-item" href="/404.html">Error404 </a>
@@ -22,7 +22,7 @@
                     <a class="menu-item" href="/mems.html">anime mems </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="https://remanga.org/">remanga </a>
+                    <a class="menu-item" href="https://mangahasu.se/index.php">mangahasu </a>
                 </li>
             </ul>
         </nav>
@@ -49,7 +49,7 @@
                         <p>volleyball</p>
                     </li>
                 </ul>
-                <h3>Inside:</h3>
+                 <h3>Inside:</h3>
                 <ul>
                     <li>
                         <p>video games</p>
