--- a/mems.html
+++ b/mems.html
@@ -3,6 +3,7 @@
 <head>
     <title>main</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/mems.css">
 </head>
 
 <body class="my">
@@ -19,15 +20,54 @@
                     <a class="menu-item" href="/flex.html">flex </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/mems.html">anime mems </a>
+                    <a class="menu-item active" href="/mems.html">anime mems </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="https://remanga.org/">remanga </a>
+                    <a class="menu-item" href="https://mangahasu.se/index.php">mangahasu </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <img height="561.5" src="https://i.pinimg.com/736x/39/75/a4/3975a4c2b352002fbd160a70b8f5fa08.jpg"
-        alt="there was mem number one">
-    <img width="500" src="7abb28aee4dabd847c4664a59cade074.jpg" alt="there was mem number two">
+    <main>
+        <div class="galery">
+            <div class="galery-image first-image">
+                <img width="500" src="/download.jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/download (1).jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/download (2).jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/download (3).jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/download (4).jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/23ee1c0de734ae4cc1ad43a86ceead22.jpg" alt=""><img>-->
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/download (5).jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/download (6).jpeg" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/jolly-jojo-memes.png" alt=""><img>
+            </div>
+            <div class="galery-image">
+                <img width="500" src="/lucy-alife-withoutyou-iblushi-https-www-facebook-cou-booooom-got-you-there-joln-48900338.png" alt=""><img>
+            </div>
+        </div>
+        <div class="controls">
+            <button>
+                left
+            </button>
+            <button>
+                right
+            </button>
+        </div>
+    </main>
 </body>
