--- a/mems.html
+++ b/mems.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>main</title>
+    <title>mems</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/mems.css">
 </head>
@@ -23,7 +23,7 @@
                     <a class="menu-item active" href="/mems.html">anime mems </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="https://mangahasu.se/index.php">mangahasu </a>
+                    <a class="menu-item" href="links.html">links </a>
                 </li>
             </ul>
         </nav>
