--- a/flex.html
+++ b/flex.html
@@ -21,7 +21,7 @@
                 <a class="menu-item" href="/mems.html">anime mems </a>
             </li>
             <li>
-                <a class="menu-item" href="https://mangahasu.se/index.php">mangahasu </a>
+                <a class="menu-item" href="links.html">links </a>
             </li>
         </ul>
     </nav>
