--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>main</title>
+    <title>Anime World</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,10 +19,10 @@
                     <a class="menu-item" href="flex.html">flex </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="mems.html">anime mems </a>
+                    <a class="menu-item" href="mems.html">anime mems</a>
                 </li>
                 <li>
-                    <a class="menu-item" href="https://mangahasu.se/index.php">mangahasu </a>
+                    <a class="menu-item" href="links.html">links </a>
                 </li>
             </ul>
         </nav>
