--- a/links.html
+++ b/links.html
@@ -33,17 +33,22 @@
             <div>
                 <section class="link-section">
                     <h2>Anime</h2>
-                    <h3>Anime (Japanese: アニメ, IPA: [aɲime] (listen)) is hand-drawn and computer-generated animation originating from Japan. Outside of Japan and in English, anime refers to Japanese animation, and refers specifically to animation produced in Japan.[1] However, in Japan and in Japanese, anime (a term derived from a shortening of the English word animation) describes all animated works, regardless of style or origin. Animation produced outside of Japan with similar style to Japanese animation is commonly referred to as anime-influenced animation.</h3>
-                    <a href="https://en.wikipedia.org/wiki/Anime">anime wikipedia</a>
+                    <h3>Anime (Japanese: アニメ, IPA: [aɲime] (listen)) is hand-drawn and computer-generated animation originating from Japan. Outside of Japan and in English, anime refers to Japanese animation, and refers specifically to animation produced in Japan.</h3>
+                    <h3>Lower there is a link whure you can find more!</h3>
+                    <a href="https://en.wikipedia.org/wiki/Anime">Wikipedia</a>
                 </section>
                 
                 <section class="link-section">
-                    
+                    <h2>Watch Anime</h2>
+                    <h3>On this website you can find and then watch anime in english</h3>
+                    <a href="https://zoro.to/">Zoro</a>
+                    <h3>On this website you can als find and then watch anime but in russian without advertising</h3>
+                    <a href="https://animevost.org/">Animevost</a>
                 </section>
 
                 <section class="link-section">
                     <h2>Mangahasu</h2>
-                    <h3>Mangahasu is american wevsite for reading manga, manhwa and manhua.All mangas are in English. A wide variety of books. Chapters come out often and there is no delay in translation</h3>
+                    <h3>Mangahasu is american website for reading manga, manhwa and manhua.All mangas are in English. A wide variety of books. Chapters come out often and there is no delay in translation</h3>
                     <a href="https://mangahasu.se/index.php">link for Mangahasu</a>
                 </section>
 
