--- a/flex.html
+++ b/flex.html
@@ -2,23 +2,23 @@
 
 <head>
     <title>flex</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="my">
     <nav>
         <ul class="menu">
             <li>
-                <a class="menu-item" href="/index.html">Main </a>
+                <a class="menu-item" href="index.html">Main </a>
             </li>
             <li>
-                <a class="menu-item" href="/404.html">Error404 </a>
+                <a class="menu-item" href="404.html">Error404 </a>
             </li>
             <li>
-                <a class="menu-item active" href="/flex.html">flex </a>
+                <a class="menu-item active" href="flex.html">flex </a>
             </li>
             <li>
-                <a class="menu-item" href="/mems.html">anime mems </a>
+                <a class="menu-item" href="mems.html">anime mems </a>
             </li>
             <li>
                 <a class="menu-item" href="links.html">links </a>
