--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a class="menu-item active" href="/index.html">Main </a>
+                    <a class="menu-item active" href="index.html">Main </a>
                 </li>
                 <li>
                     <a class="menu-item" href="404.html">Error404 </a>
