--- a/links.html
+++ b/links.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>links</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/links.css">    
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="links.css">    
 </head>
 
 <body class="my">
@@ -11,16 +11,16 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a class="menu-item" href="/index.html">Main </a>
+                    <a class="menu-item" href="index.html">Main </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/404.html">Error404 </a>
+                    <a class="menu-item" href="404.html">Error404 </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/flex.html">flex </a>
+                    <a class="menu-item" href="flex.html">flex </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/mems.html">anime mems </a>
+                    <a class="menu-item" href="mems.html">anime mems </a>
                 </li>
                 <li>
                     <a class="menu-item active" href="links.html">links </a>
