--- a/mems.html
+++ b/mems.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>mems</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/mems.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mems.css">
 </head>
 
 <body class="my">
@@ -11,16 +11,16 @@
         <nav>
             <ul class="menu">
                 <li>
-                    <a class="menu-item" href="/index.html">Main </a>
+                    <a class="menu-item" href="index.html">Main </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/404.html">Error404 </a>
+                    <a class="menu-item" href="404.html">Error404 </a>
                 </li>
                 <li>
-                    <a class="menu-item" href="/flex.html">flex </a>
+                    <a class="menu-item" href="flex.html">flex </a>
                 </li>
                 <li>
-                    <a class="menu-item active" href="/mems.html">anime mems </a>
+                    <a class="menu-item active" href="mems.html">anime mems </a>
                 </li>
                 <li>
                     <a class="menu-item" href="links.html">links </a>
@@ -31,34 +31,34 @@
     <main>
         <div class="galery">
             <div class="galery-image first-image">
-                <img width="500" src="/download.jpeg" alt=""><img>
+                <img width="500" src="download.jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/download (1).jpeg" alt=""><img>
+                <img width="500" src="download (1).jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/download (2).jpeg" alt=""><img>
+                <img width="500" src="download (2).jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/download (3).jpeg" alt=""><img>
+                <img width="500" src="download (3).jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/download (4).jpeg" alt=""><img>
+                <img width="500" src="download (4).jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/23ee1c0de734ae4cc1ad43a86ceead22.jpg" alt=""><img>-->
+                <img width="500" src="23ee1c0de734ae4cc1ad43a86ceead22.jpg" alt=""><img>-->
             </div>
             <div class="galery-image">
-                <img width="500" src="/download (5).jpeg" alt=""><img>
+                <img width="500" src="download (5).jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/download (6).jpeg" alt=""><img>
+                <img width="500" src="download (6).jpeg" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/jolly-jojo-memes.png" alt=""><img>
+                <img width="500" src="jolly-jojo-memes.png" alt=""><img>
             </div>
             <div class="galery-image">
-                <img width="500" src="/lucy-alife-withoutyou-iblushi-https-www-facebook-cou-booooom-got-you-there-joln-48900338.png" alt=""><img>
+                <img width="500" src="lucy-alife-withoutyou-iblushi-https-www-facebook-cou-booooom-got-you-there-joln-48900338.png" alt=""><img>
             </div>
         </div>
         <div class="controls">
