--- a/mems.html
+++ b/mems.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="galery">
-            <div class="galery-image first-image">
+            <div class="galery-image first_image">
                 <img width="450" src="download.jpeg" alt=""><img>
             </div>
             <div class="galery-image">
@@ -62,12 +62,13 @@
             </div>
         </div>
         <div class="controls">
-            <button>
+            <button id="left_button">
                 left
             </button>
-            <button>
+            <button id="right_button">
                 right
             </button>
         </div>
     </main>
+    <script src="mems.js"></script>
 </body>
